src/objects/WidgetStyle__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>col1__c</fullName>
        <label>col1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dark__c</fullName>
        <label>dark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hover__c</fullName>
        <label>hover</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>light__c</fullName>
        <label>light</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>panel__c</fullName>
        <label>panel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>panelsuccess__c</fullName>
        <label>panelsuccess</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WidgetStyle</label>
</CustomObject>